--- a/index.html
+++ b/index.html
@@ -1283,7 +1283,7 @@
                                                                                             <div class="carousel-inner">
 
                                                                                                 <div class="item active">
-                                                                                                    <img src="images/studio/photo1.jpg" alt="" />                                                                               
+                                                                                                    <img src="images/studio/photo1.JPG" alt="" />                                                                               
                                                                                                 </div>
                                                                                                 <div class="item">
                                                                                                     <img src="images/studio/photo2.jpg" alt="" />
@@ -1292,7 +1292,7 @@
                                                                                                     <img src="images/studio/photo3.jpg" alt="" />
                                                                                                 </div>
                                                                                                 <div class="item">
-                                                                                                    <img src="images/studio/photo4.jpg" alt="" />
+                                                                                                    <img src="images/studio/photo4.JPG" alt="" />
                                                                                                 </div>
 
                                                                                             </div>
