--- a/index.html
+++ b/index.html
@@ -1183,7 +1183,7 @@
 
                                                                             <div class="col-md-12 post_media">
                                                                                 <div class="post-format-icon">
-                                                                                    <a href="#" class="item-date"><span class="fa fa-pencil-o"></span></a>
+                                                                                    <a href="#" class="item-date"><span class="fa fa-picture-o"></span></a>
                                                                                 </div>
                                                                                 <div class="media">
                                                                                     <div class="he-wrap tpl2">
