--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                                                                 <h5>Bechlor of Engineering <span class="duration"><i class="fa fa-calendar color"></i> Aug 2011 - Jul 2015</span></h5>
                                                                 <h6><span class="fa fa-book"></span>Tsinghua University</h6>
                                                                 <p>Major in Computer Science and Technology. <br/>
-                                                                Overall GPA 91/100, <br/>
+                                                                Overall GPA 91/100, Ranking 9/123<br/>
                                                                 Junior year GPA 94.5/100,  Ranking 3/123</p>
                                                             </li>
                                                             <li>
