--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 
                                                         <p style="margin-bottom:20px">
                                                             <i class="fa fa-quote-left"></i>       
-                                                            Mathematics enthusiasts.<br/>
+                                                            Mathematics enthusiast.<br/>
                                                             Soccer player, centre-forward.<br/>
                                                             Serious amateur of video shotting&amp;post-production.<br/>
                                                             Fond of Chinese literature and poems.
