--- a/index.html
+++ b/index.html
@@ -1348,11 +1348,11 @@
                                             <!-- .contact -->
                                             <div id="contact" class="content_2">
                                                 <h1 class="h-bloc">Contact - Contact Me</h1>
-                                                <div class="row">
+                                                <!--div class="row">
                                                     <div class="col-lg-12">
                                                         <div id="map"></div>
                                                     </div>  
-                                                </div>
+                                                </div-->
                                                 <div class="row">
                                                     <div class="col-lg-12">
                                                         <div>
@@ -1428,9 +1428,9 @@
         <script type="text/javascript" src="js/jquery.prettyPhoto.js"></script>
 
         <!-- Js | gmaps -->
-        <!-- Credits: http://maps.google.com/maps/api/js?sensor=true-->
+        <!-- Credits: http://maps.google.com/maps/api/js?sensor=true>
         <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
-        <script type="text/javascript" src="js/gmaps.min.js"></script>
+        <script type="text/javascript" src="js/gmaps.min.js"></script-->
 
         <!-- Js | Js -->
         <!-- Credits: http://themeforest.net/user/FlexyCodes -->
