--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                                             </li>
 
                                             <!--a href="#" id="print"><i class="fa fa-print icon_print"></i> </a-->
-                                            <a href="files/CV_Tiezheng_Li.pdf" id="downlowd"><i class="fa fa-download icon_print"></i> </a>
+                                            <a href="files/Resume_Tiezheng_Li.pdf" id="downlowd"><i class="fa fa-download icon_print"></i> </a>
 
                                         </ul>
                                         <!-- /resp-tabs-list -->
